--- a/MyFirstJC.ipynb
+++ b/MyFirstJC.ipynb
@@ -34,7 +34,7 @@
         "id": "3NRgWZ4nm31V"
       },
       "source": [
-        "# My First Jupyter Collab Notebook!"
+        "# My First Jupyter Colab Notebook!"
       ]
     },
     {
