--- a/CalculateDistanceBetween2PointsOnEarth.ipynb
+++ b/CalculateDistanceBetween2PointsOnEarth.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "CalculateDistanceBetween2PointsOnEarth.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiT+g3C4bKJy5+SA6h1f1l",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPgFpZZIoRgKrVvsZ9eoLa8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +36,9 @@
       "source": [
         "#Calculate The Distance Between 2 Points on the Earth\n",
         "\n",
-        "Enter the LON/LAT for 2 locations and this Python script will calculate the distance in KM. If you want to change the measurement to Miles, change the 'r' value as noted below. Remember to update the print statement at the end to reflect the chosen measurement.\n",
-        "\n",
-        "JB // July 25, 2021"
+        "* Enter the LON/LAT for 2 locations and this Python script will calculate the distance in KM. \n",
+        "* If you want to change the measurement to Miles, change the 'r' value as noted below. \n",
+        "* Remember to update the print statement at the end to reflect the chosen measurement."
       ]
     },
     {
@@ -56,15 +57,15 @@
         "id": "1CSTTD9hn0_f"
       },
       "source": [
-        "# Assign the LON/LAT variables BEFORE runninc the next block of code!!!\n",
+        "# Assign the LON/LAT variables BEFORE running the next block of code!!!\n",
         "\n",
-        "lat1 = 53.32055555555556\n",
-        "lon1 = -1.7297222222222221\n",
+        "lat1 = 53.32055555555556      #Set this LAT\n",
+        "lon1 = -1.7297222222222221    #Set this LON\n",
         "\n",
-        "lat2 = 53.31861111111111\n",
-        "lon2 = -1.6997222222222223"
+        "lat2 = 53.31861111111111      #Set this LAT\n",
+        "lon2 = -1.6997222222222223    #Set this LON"
       ],
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -74,7 +75,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjBd8kt7mQQ1",
-        "outputId": "31fbe809-ae0d-4ce7-bb73-030a979e0de2"
+        "outputId": "e9264dc2-9ee5-4ef9-9167-480b75050602"
       },
       "source": [
         "# Python 3 program to calculate Distance Between Two Points on Earth\n",
@@ -106,12 +107,12 @@
         "#Ensure you run the previous code block above to assign the variables first!\n",
         "\n",
         "#calculate the distance - call the function with vars\n",
-        "DISTANCE = round(distance(lat1, lat2, lon1, lon2),2)\n",
+        "theDistanceIs = round(distance(lat1, lat2, lon1, lon2),2)\n",
         "\n",
         "#print the distance\n",
-        "print(DISTANCE, \"KM\")\n"
+        "print(theDistanceIs, \"KM\")\n"
       ],
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
